# agent-playground

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.dev.yml  docker-compose.yml  e2e-report.json
.github/workflows/: mobile.yml  test-recipes.yml
.planning/: FRAMEWORK-MATURITY-ROADMAP.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/audit/: ACTION-LIST.md  BACKEND-DESICCATED.md  FRONTEND-DESSICATED.md  SESSION-HANDOFF-2026-04-18.md
.planning/debug/: hermes-invoke-fail-silent-stderr.md
.planning/notes/: mobile-mvp-decisions.md
.planning/research/: AGENT-MATRIX.md  ARCHITECTURE.md  CHANNEL-RECON-EMPIRICAL.md  CHANNEL-RECON.md  FEATURES.md  PHASE-02.5-PREP.md  PITFALLS.md  RECIPE-SCHEMA-DRAFT.md  (+4 more)
api/: go.mod  go.sum
api_server/: Makefile  README.md  pyproject.toml
api_server/alembic/: README  env.py
api_server/alembic/versions/: 001_baseline.py  002_agent_name_personality.py  003_agent_containers.py  004_agent_events.py  005_sessions_and_oauth_users.py  006_purge_anonymous.py  007_inapp_messages.py  008_idempotency_keys_relax_run_fk.py
api_server/src/api_server/: __init__.py  config.py  constants.py  db.py  log.py  main.py
api_server/src/api_server/auth/: deps.py  oauth.py
api_server/src/api_server/crypto/: __init__.py  age_cipher.py
api_server/src/api_server/middleware/: __init__.py  correlation_id.py  idempotency.py  log_redact.py  rate_limit.py  session.py
api_server/src/api_server/models/: agents.py  errors.py  events.py  recipes.py  runs.py  schemas.py  users.py
api_server/src/api_server/routes/: __init__.py  agent_events.py  agent_lifecycle.py  agent_messages.py  agents.py  auth.py  health.py  models.py  recipes.py  runs.py  schemas.py  users.py
api_server/src/api_server/services/: __init__.py  event_store.py  idempotency.py  inapp_dispatcher.py  inapp_messages_store.py  inapp_outbox.py  inapp_reaper.py  inapp_recipe_index.py  inapp_substitutions.py  lint_service.py  openrouter_models.py  personality.py  rate_limit.py  recipes_loader.py  run_store.py  runner_bridge.py  watcher_service.py
api_server/src/api_server/util/: __init__.py  redaction.py  ulid.py
api_server/tests/: conftest.py  test_busybox_tail_line_buffer.py  test_docs_gating.py  test_events_auth.py  test_events_batching_perf.py  test_events_inject_test_event.py  test_events_lifecycle_cancel_on_stop.py  test_events_lifecycle_spawn_on_start.py  test_events_lifespan_reattach.py  test_events_long_poll.py  test_events_migration.py  test_events_seq_concurrency.py  test_events_store.py  test_events_watcher_backpressure.py  test_events_watcher_docker_logs.py  test_events_watcher_exec_poll.py  test_events_watcher_file_tail.py  test_events_watcher_teardown.py  test_health.py  test_idempotency.py  test_inapp_messages_store.py  test_inapp_outbox.py  test_inapp_reaper.py  test_lifecycle_env_by_provider.py  test_lint.py  test_log_redact.py  test_main_lifespan_inapp.py  test_migration.py  test_migration_007.py  test_rate_limit.py  test_recipes.py  test_run_concurrency.py  test_run_recipe_persistent_inapp.py  test_run_recipe_telegram_invariant.py  test_runs.py  test_schemas.py
api_server/tests/auth/: conftest.py  test_cross_user_isolation.py  test_github_authorize.py  test_github_callback.py  test_google_authorize.py  test_google_callback.py  test_logout.py  test_oauth_config.py  test_oauth_mobile.py
api_server/tests/config/: test_oauth_state_secret_fail_loud.py  test_redis_url_setting.py
api_server/tests/e2e/: README.md  __init__.py  _helpers.py  conftest.py  e2e-report.json  test_inapp_5x5_matrix.py
api_server/tests/fixtures/event_log_samples/: nullclaw_history.json  openclaw_session.jsonl
api_server/tests/middleware/: conftest.py  test_chat_idempotency.py  test_chat_rate_limit.py  test_idempotency_user_id.py  test_last_seen_throttle.py  test_log_redact_cookies.py  test_session_middleware.py
api_server/tests/models/: test_inapp_payloads.py
api_server/tests/routes/: test_agent_lifecycle_inapp.py  test_agent_messages_delete.py  test_agent_messages_get.py  test_agent_messages_post.py  test_agent_messages_sse.py  test_agents_status_field.py  test_messages_idempotency_required.py  test_models.py  test_users_me.py
api_server/tests/services/: test_inapp_dispatcher.py  test_inapp_recipe_index.py
api_server/tests/spikes/: test_google_auth_multi_audience.py  test_gzip_sse_compat.py  test_respx_authlib.py  test_respx_intercepts_pyjwk_fetch.py  test_truncate_cascade.py
deploy/: .env.prod.example  Caddyfile  README.md  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  init-api-db.sh
docs/: RECIPE-SCHEMA.md
frontend/: .gitignore  middleware.ts  next.config.mjs  proxy.ts
mobile/: .env.example  .gitignore  Makefile  README.md  analysis_options.yaml  pubspec.yaml
recipes/: BACKLOG.md  README.md  hermes.yaml  nanobot.yaml  nullclaw.yaml  openclaw.yaml  picoclaw.yaml  zeroclaw.yaml
scripts/: migrate_recipes_phase10.py  smoke-e2e.sh
spikes/: flutter-api-roundtrip.md
test/: 22c-manual-smoke.md  drop-in.sh  e2e_channels_v0_2.sh  sc03-gate-c.md  smoke-api.sh  smoke-matrix.sh
tools/: Dockerfile.api  Dockerfile.test-runner  _placeholders.py  ap.recipe.schema.json  pyproject.toml  run_recipe.py
tools/tests/: conftest.py  test_categories.py  test_hardening_api_key.py  test_hardening_clone_cache.py  test_hardening_envfile.py  test_hardening_misc.py  test_hardening_schema_review.py  test_hardening_substitute.py  test_integration_docker.py  test_lint.py  test_pass_if.py  test_phase10_primitives.py  test_phase10_runner.py  test_placeholders.py  test_recipe_regression.py  test_roundtrip.py  test_run_recipe_envfile_overlay.py  test_schema_selfcheck.py
tools/tests/broken_recipes/: image_pull_no_image.yaml  invalid_name_chars.yaml  missing_api_version.yaml  missing_build_mode.yaml  missing_name.yaml  missing_needle.yaml  missing_regex.yaml  missing_smoke_prompt.yaml  missing_verified_cells.yaml  unknown_build_mode.yaml  unknown_top_level_key.yaml  wrong_api_version.yaml
web/: next.config.ts  package.json  pnpm-lock.yaml
(+609 files in other folders)
