[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_server"
version = "0.1.0"
description = "Agent Playground API — FastAPI wrapper around tools/run_recipe.py"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.0",
  "uvicorn[standard]>=0.44.0,<0.45",
  "asyncpg>=0.31.0,<0.32",
  "sqlalchemy>=2.0.49,<2.1",
  # greenlet is required at runtime by SQLAlchemy's async `run_sync` path
  # (used in alembic/env.py). SQLAlchemy marks it as an optional extra
  # (`sqlalchemy[asyncio]`) but pip resolves that with no action on
  # darwin-arm64, so pin it explicitly. Plan 19-01 deviation (Rule 2).
  "greenlet>=3.0",
  "alembic>=1.18.4,<1.19",
  "pydantic>=2.11",
  "pydantic-settings>=2.0",
  "python-ulid>=3.1.0,<4",
  "structlog>=25.5.0,<26",
  "asgi-correlation-id>=4.3.4,<5",
  # Phase 22b-01 Task 1: docker-py SDK for log-watcher (Wave 1)
  # and conftest fixtures (docker_client, running_alpine_container).
  "docker>=7.0,<8",
  "ruamel.yaml>=0.17.21",
  "jsonschema>=4.23",
  # Phase 22-02: age-based encryption for channel credentials at rest.
  # pyrage is a Rust-backed age binding (aligned with CLAUDE.md's
  # filippo.io/age guidance); cryptography is used for HKDF per-user
  # KEK derivation. Both verified present in the 22-SPIKES probes
  # (spike-01, spike-02).
  "pyrage>=1.2",
  "cryptography>=42",
  # Phase 22c-01: OAuth2/OIDC client (Google + GitHub) via authlib's
  # StarletteOAuth2App (httpx-backed). Per AMD-05 + RESEARCH Standard Stack.
  "authlib>=1.6.11,<1.7",
  # Phase 22c-01: REQUIRED by Starlette's built-in SessionMiddleware for
  # CSRF-state cookie signing (authlib stores state in request.session).
  # Already installed as a transitive dep; pinning explicitly per AMD-07.
  "itsdangerous>=2.2.0,<3",
  # Phase 22c-09: REQUIRED at runtime by authlib's starlette_client
  # integration (httpx_client.AsyncOAuth2Client). Was previously only in
  # dev deps; promoted to runtime after smoke gate uncovered
  # ModuleNotFoundError: httpx in api_server container boot.
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres]>=4.14.2",
  "httpx>=0.27",
  # Phase 22c-01: httpx-native mock library. Supersedes CONTEXT
  # D-22c-TEST-01's `responses` (which only intercepts `requests`).
  # Per AMD-05 + RESEARCH §Test-tier Additions.
  #
  # NOTE: RESEARCH originally pinned `>=0.21,<0.22`, but respx 0.21 is
  # NOT compatible with httpx 0.28 (which authlib 1.6.11 transitively
  # requires). SPIKE-A empirically verified: respx 0.21.1 fails to match
  # routes against httpx 0.28.1 requests ("AllMockedAssertionError:
  # RESPX: <Request(b'POST', 'https://oauth2.googleapis.com/token')> not
  # mocked!"); respx 0.23.1 intercepts the same request correctly.
  # Bumped to `>=0.22,<0.24` per deviation Rule 3 (blocking issue: wrong
  # version pin prevents the Wave 0 gate from passing). See Task 2
  # spike-a evidence markdown for the full trace.
  "respx>=0.22,<0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "api_integration: spawn real Postgres + run real recipe; opt-in via pytest -m api_integration",
]
